@@ -90,6 +90,7 @@
           <release>${java.version}</release>
           <source>${java.version}</source>
           <target>${java.version}</target>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
     </plugins>
@@ -119,18 +120,18 @@
     <dependency>
       <groupId>academy.kovalevskyi</groupId>
       <artifactId>TestingFramework</artifactId>
-      <version>4.4</version>
+      <version>4.5</version>
     </dependency>
     <!--    Courses add below-->
     <dependency>
       <groupId>com.kovalevskyi.academy</groupId>
       <artifactId>CodingBootcamp</artifactId>
-      <version>3.5</version>
+      <version>3.6</version>
     </dependency>
     <dependency>
       <groupId>academy.kovalevskyi</groupId>
       <artifactId>JavaDeepDive</artifactId>
-      <version>2.1</version>
+      <version>2.2</version>
     </dependency>
   </dependencies>
 </project>
